# foliopage

./: .gitignore  .mcp.json  CLAUDE.md  CLAUDE.worker.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml
.claude/skills/business-breakdown/: SKILL.md
.claude/skills/capital-flow/: SKILL.md
.claude/skills/event-timeline/: SKILL.md
.claude/skills/metric-drilldown/: SKILL.md
.claude/skills/news-timeline/: SKILL.md
.claude/skills/peer-comparison/: SKILL.md
.claude/skills/peer-comparison-deep/: SKILL.md
.claude/skills/sentiment-analysis/: SKILL.md
.claude/skills/stock-overview/: SKILL.md
.claude/skills/valuation-deep/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  e2e-verification-report.md  perf-profile.md
examples/: 600519-overview.html
orchestrator/: __init__.py  agent_runner.py  chart_service.py  config.py  errors.py  prompts.py  renderer.py  research_coordinator.py  security.py  server.py  session.py  worker_prompts.py
scripts/: dry_run.sh  init_mcp.sh
shell/: index.html  report.html
shell/static/: flipbook.js  foliopage.css  theme.js
tests/: conftest.py  test_cache_mcp.py  test_chart_mcp.py  test_news_mcp.py  test_orchestrator.py  test_stock_mcp.py
tools/_shared/: cache_store.py
tools/cache_mcp/: __init__.py  server.py
tools/chart_mcp/: __init__.py  server.py
tools/news_mcp/: __init__.py  server.py
tools/stock_mcp/: server.py
