[project]
name = "foliopage"
version = "0.1.0"
description = "Local-first stock research tool — generates self-contained HTML research pages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "akshare>=1.14.0",
    "cachetools>=5.3.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.40",
    "matplotlib>=3.8.0",
    "feedparser>=6.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[project.scripts]
foliopage = "orchestrator:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator", "tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: real network calls (deselect with -m 'not integration')",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
